src/bindings_linux_armv8.rs

unsafe extern "C" {
    #[doc = " @noop FT_EE_ProgramEx\n @par Supported Operating Systems\n Linux\n Mac OS X (10.4 and later)\n Windows (2000 and later)\n Windows CE (4.2 and later)\n @par Summary\n Program the EEPROM and pass strings separately.\n @param ftHandle Handle of the device.\n @param pData Pointer to structure of type FT_PROGRAM_DATA.\n @param *Manufacturer Pointer to a null-terminated string containing the manufacturer name.\n @param *ManufacturerId Pointer to a null-terminated string containing the manufacturer ID.\n @param *Description Pointer to a null-terminated string containing the device description.\n @param *SerialNumber Pointer to a null-terminated string containing the device serial number.\n @returns\n FT_OK if successful, otherwise the return value is an FT error code.\n @remarks\n This variation of the FT_EE_Program function was included to provide support for languages such\n as LabVIEW where problems can occur when string pointers are contained in a structure.\n @n This function interprets the parameter pData as a pointer to a structure of type FT_PROGRAM_DATA\n that contains the data to write to the EEPROM. The data is written to EEPROM, then read back and\n verified. The string pointer parameters in the FT_PROGRAM_DATA structure should be allocated as\n DWORDs to avoid overlapping of parameters. The string parameters are then passed in separately.\n @n If the SerialNumber field is NULL, or SerialNumber points to a NULL string, a serial number based\n on the ManufacturerId and the current date and time will be generated. The Manufacturer string\n length plus the Description string length must be less than or equal to 40 characters.\n @note Note that the DLL must be informed which version of the FT_PROGRAM_DATA structure is being used.\n This is done through the Signature1, Signature2 and Version elements of the structure. Signature1\n should always be 0x00000000, Signature2 should always be 0xFFFFFFFF and Version can be set to use\n whichever version is required. For compatibility with all current devices Version should be set to the\n latest version of the FT_PROGRAM_DATA structure which is defined in FTD2XX.h.\n If pData is NULL, the structure version will default to 0 (original BM series) and the device will be\n programmed with the default data.\n @see FT_PROGRAM_DATA"]
    pub fn FT_EE_ProgramEx(
        ftHandle: FT_HANDLE,
        pData: PFT_PROGRAM_DATA,
        Manufacturer: *mut ::std::os::raw::c_char,
        ManufacturerId: *mut ::std::os::raw::c_char,
        Description: *mut ::std::os::raw::c_char,
        SerialNumber: *mut ::std::os::raw::c_char,
    ) -> FT_STATUS;
}
unsafe extern "C" {
    #[doc = " @noop FT_EE_UASize\n @par Supported Operating Systems\n Linux\n Mac OS X (10.4 and later)\n Windows (2000 and later)\n Windows CE (4.2 and later)\n @par Summary\n Get the available size of the EEPROM user area.\n @param ftHandle Handle of the device.\n @param lpdwSize Pointer to a DWORD that receives the available size, in bytes, of the EEPROM\n user area.\n @returns\n FT_OK if successful, otherwise the return value is an FT error code.\n @remarks\n The user area of an FTDI device EEPROM is the total area of the EEPROM that is unused by device\n configuration information and descriptors. This area is available to the user to store information\n specific\tto their application. The size of the user area depends on the length of the Manufacturer,\n ManufacturerId, Description and SerialNumber strings programmed into the EEPROM."]
    pub fn FT_EE_UASize(ftHandle: FT_HANDLE, lpdwSize: LPDWORD) -> FT_STATUS;
}
unsafe extern "C" {
    #[doc = " @noop FT_EE_UARead\n @par Supported Operating Systems\n Linux\n Mac OS X (10.4 and later)\n Windows (2000 and later)\n Windows CE (4.2 and later)\n @par Summary\n Read the contents of the EEPROM user area.\n @param ftHandle Handle of the device.\n @param pucData Pointer to a buffer that contains storage for data to be read.\n @param dwDataLen Size, in bytes, of buffer that contains storage for the data to be read.\n @param lpdwBytesRead Pointer to a DWORD that receives the number of bytes read.\n @returns\n FT_OK if successful, otherwise the return value is an FT error code.\n @remarks\n This function interprets the parameter pucData as a pointer to an array of bytes of size\n dwDataLen that contains storage for the data to be read from the EEPROM user area. The actual\n number of bytes read is stored in the DWORD referenced by lpdwBytesRead.\n @n If dwDataLen is less than the size of the EEPROM user area, then dwDataLen bytes are read\n into the buffer. Otherwise, the whole of the EEPROM user area is read into the buffer. The\n available user area size can be determined by calling FT_EE_UASize.\n @n An application should check the function return value and lpdwBytesRead when FT_EE_UARead\n returns."]
    pub fn FT_EE_UARead(
        ftHandle: FT_HANDLE,
        pucData: PUCHAR,
        dwDataLen: DWORD,
        lpdwBytesRead: LPDWORD,
    ) -> FT_STATUS;
}
unsafe extern "C" {
    #[doc = " @noop FT_EE_UAWrite\n @par Supported Operating Systems\n Linux\n Mac OS X (10.4 and later)\n Windows (2000 and later)\n Windows CE (4.2 and later)\n @par Summary\n Write data into the EEPROM user area.\n @param ftHandle Handle of the device.\n @param pucData Pointer to a buffer that contains the data to be written.\n @param dwDataLen Size, in bytes, of buffer that contains storage for the data to be read.\n @returns\n FT_OK if successful, otherwise the return value is an FT error code.\n @remarks\n This function interprets the parameter pucData as a pointer to an array of bytes of size\n dwDataLen that contains the data to be written to the EEPROM user area. It is a programming\n error for dwDataLen to be greater than the size of the EEPROM user area. The available user\n area size can be determined by calling FT_EE_UASize."]
    pub fn FT_EE_UAWrite(ftHandle: FT_HANDLE, pucData: PUCHAR, dwDataLen: DWORD) -> FT_STATUS;
}
#[doc = "  @noop FT_EEPROM_HEADER\n @par Summary\n Structure to hold data for FT_EEPROM_Program and FT_EEPROM_Read functions.\n The structure for the command includes one FT_EEPROM_HEADER with a device-specific\n structure appended.\n @see FT_EEPROM_Read\n @see FT_EEPROM_Program"]
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct ft_eeprom_header {
    pub deviceType: FT_DEVICE,
    #[doc = " FTxxxx device type to be programmed\n Device descriptor options"]
    pub VendorId: WORD,
    #[doc = " 0x0403"]
    pub ProductId: WORD,
    #[doc = " 0x6001"]
    pub SerNumEnable: UCHAR,
    #[doc = " non-zero if serial number to be used\n Config descriptor options"]
    pub MaxPower: WORD,
    #[doc = " 0 < MaxPower <= 500"]
    pub SelfPowered: UCHAR,
    #[doc = " 0 = bus powered, 1 = self powered"]
    pub RemoteWakeup: UCHAR,
    #[doc = " 0 = not capable, 1 = capable\n Hardware options"]
    pub PullDownEnable: UCHAR,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ft_eeprom_header"][::std::mem::size_of::<ft_eeprom_header>() - 16usize];
    ["Alignment of ft_eeprom_header"][::std::mem::align_of::<ft_eeprom_header>() - 4usize];
    ["Offset of field: ft_eeprom_header::deviceType"]
        [::std::mem::offset_of!(ft_eeprom_header, deviceType) - 0usize];
    ["Offset of field: ft_eeprom_header::VendorId"]
        [::std::mem::offset_of!(ft_eeprom_header, VendorId) - 4usize];
    ["Offset of field: ft_eeprom_header::ProductId"]
        [::std::mem::offset_of!(ft_eeprom_header, ProductId) - 6usize];
    ["Offset of field: ft_eeprom_header::SerNumEnable"]
        [::std::mem::offset_of!(ft_eeprom_header, SerNumEnable) - 8usize];
    ["Offset of field: ft_eeprom_header::MaxPower"]
        [::std::mem::offset_of!(ft_eeprom_header, MaxPower) - 10usize];
    ["Offset of field: ft_eeprom_header::SelfPowered"]
        [::std::mem::offset_of!(ft_eeprom_header, SelfPowered) - 12usize];
    ["Offset of field: ft_eeprom_header::RemoteWakeup"]
        [::std::mem::offset_of!(ft_eeprom_header, RemoteWakeup) - 13usize];
    ["Offset of field: ft_eeprom_header::PullDownEnable"]
        [::std::mem::offset_of!(ft_eeprom_header, PullDownEnable) - 14usize];
};
#[doc = "  @noop FT_EEPROM_HEADER\n @par Summary\n Structure to hold data for FT_EEPROM_Program and FT_EEPROM_Read functions.\n The structure for the command includes one FT_EEPROM_HEADER with a device-specific\n structure appended.\n @see FT_EEPROM_Read\n @see FT_EEPROM_Program"]
pub type FT_EEPROM_HEADER = ft_eeprom_header;
#[doc = "  @noop FT_EEPROM_232B\n @par Summary\n Structure to hold data for the FT232B data in the FT_EEPROM_Program and FT_EEPROM_Read functions.\n This is appended to an FT_EEPROM_HEADER structure.\n @see FT_EEPROM_HEADER"]
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct ft_eeprom_232b {
    #[doc = " Common header"]
    pub common: FT_EEPROM_HEADER,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ft_eeprom_232b"][::std::mem::size_of::<ft_eeprom_232b>() - 16usize];
    ["Alignment of ft_eeprom_232b"][::std::mem::align_of::<ft_eeprom_232b>() - 4usize];
    ["Offset of field: ft_eeprom_232b::common"]
        [::std::mem::offset_of!(ft_eeprom_232b, common) - 0usize];
};
#[doc = "  @noop FT_EEPROM_232B\n @par Summary\n Structure to hold data for the FT232B data in the FT_EEPROM_Program and FT_EEPROM_Read functions.\n This is appended to an FT_EEPROM_HEADER structure.\n @see FT_EEPROM_HEADER"]
pub type FT_EEPROM_232B = ft_eeprom_232b;
#[doc = "  @noop FT_EEPROM_2232\n @par Summary\n Structure to hold data for the FT2232C, FT2232D and FT2232L data in the FT_EEPROM_Program\n and FT_EEPROM_Read functions.\n This is appended to an FT_EEPROM_HEADER structure.\n @see FT_EEPROM_HEADER"]
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct ft_eeprom_2232 {
    #[doc = " Common header"]
    pub common: FT_EEPROM_HEADER,
    #[doc = " common elements for all device EEPROMs\n Drive options"]
    pub AIsHighCurrent: UCHAR,
    #[doc = " non-zero if interface is high current"]
    pub BIsHighCurrent: UCHAR,
    #[doc = " non-zero if interface is high current\n Hardware options"]
    pub AIsFifo: UCHAR,
    #[doc = " non-zero if interface is 245 FIFO"]
    pub AIsFifoTar: UCHAR,
    #[doc = " non-zero if interface is 245 FIFO CPU target"]
    pub AIsFastSer: UCHAR,
    #[doc = " non-zero if interface is Fast serial"]
    pub BIsFifo: UCHAR,
    #[doc = " non-zero if interface is 245 FIFO"]
    pub BIsFifoTar: UCHAR,
    #[doc = " non-zero if interface is 245 FIFO CPU target"]
    pub BIsFastSer: UCHAR,
    #[doc = " non-zero if interface is Fast serial\n Driver option"]
    pub ADriverType: UCHAR,
    #[doc = " non-zero if interface is to use VCP drivers"]
    pub BDriverType: UCHAR,
}
